--- a/src/hojas-estilos-css/Testimonio.css
+++ b/src/hojas-estilos-css/Testimonio.css
@@ -7,12 +7,8 @@
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
-    box-shadow: 0 3px 13px 1px rgb(0, 0,0 /9%);
+    box-shadow: 0 3px 13px 1px rgb(0 0 0 /9%);
 }
 .imagen-testimonio{
-    /* height: auto; 
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;  */
+    height: 100%;
 }
