--- a/src/hojas-estilos-css/Testimonio.css
+++ b/src/hojas-estilos-css/Testimonio.css
@@ -10,5 +10,25 @@
     box-shadow: 0 3px 13px 1px rgb(0 0 0 /9%);
 }
 .imagen-testimonio{
-    height: 100%;
+    height:100%;
+    width: auto;
+}
+.contenedor-texto-testimonio{
+    text-align: center;
+    padding: 40px;
+    font-weight: 400;
+    font-family: Lato, sans-serif;
+    line-height: 1.5rem;
+}
+.nombre-testimonio{
+    font-size:1.3rem;
+}
+.cargo-testimonio{
+    font-size: 1.3rem;
+    margin-top: 15px;
+    padding-bottom: 30px;
+}
+.texto-testimonio{
+    font-size: 1.1rem;
+    text-align: justify;
 }
